se adhiere botón flotante

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         </nav>
     </header>
     <main>
+        <button><a href="#inicio">^</a></button>
         <section id="inicio">
             <h1>Guillermo Barrientos</h1>
-            <p>¡Hola! Mi nombre es Guillermo Barrientos y soy un apasionado tester de calidad (QA) con una sólida
+            <p>¡Hola! Mi nombre es Guillermo Barrientos.. y soy un apasionado tester de calidad (QA) con una sólida
                 experiencia de más de dos años en la industria. Actualmente trabajo para una consultora donde desempeño
                 múltiples roles, desde la realización de pruebas de calidad hasta la implementación y capacitación de
                 sistemas, así como brindar soporte técnico a los usuarios.</p>
@@ -38,23 +39,23 @@
                 </li>
                 <details>
                     <summary>Tester de Calidad (QA)</summary>
-                    <p><span>(enero/2023 - Actualidad)</span>
-                        • Responsabilidades:
+                    <p><span>(enero/2023 - Actualidad)</span><br>
+                        • Responsabilidades: <br>
                         Conducción de pruebas exhaustivas para garantizar la calidad del software.
                         Identificación y documentación de errores y problemas potenciales.
                         Colaboración con equipos de desarrollo para mejorar la calidad del producto.</p>
                 </details>
                 <details>
-                    <summary>Implementación y Capacitación del Sistema</summary>
-                    <p><span>(enero/2023 - Actualidad)</span>
-                        • Responsabilidades:
+                    <summary>Implementación y Capacitación de Sistemas</summary>
+                    <p><span>(enero/2023 - Actualidad)</span><br>
+                        • Responsabilidades: <br>
                         Despliegue exitoso de sistemas en entornos de producción.
                         Capacitación a usuarios finales para garantizar una adopción efectiva del sistema.</p>
                 </details>
                 <details>
                     <summary>Soporte al Usuario</summary>
-                    <p><span>(enero/2023 - Actualidad)</span>
-                        • Responsabilidades:
+                    <p><span>(enero/2023 - Actualidad)</span><br>
+                        • Responsabilidades: <br>
                         Resolución rápida y eficiente de problemas técnicos.
                         Comunicación efectiva con los usuarios para comprender y abordar sus necesidades.</p>
                 </details>
