Actualización de la descripción de mi Inicio

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
                 experiencia de más de dos años en la industria. Actualmente trabajo para una consultora donde desempeño
                 múltiples roles, desde la realización de pruebas de calidad hasta la implementación y capacitación de
                 sistemas, así como brindar soporte técnico a los usuarios.</p>
-            <p>Como estudiante, estoy en el segundo año de la carrera de Análisis de Sistemas Informáticos, reforzando
-                con el curso de
-                Desarrollo Web; he estado
-                desarrollando algunas páginas web que las tengo en mi <a href="#portafolio">Portafolio</a>.</p>
+            <p>Como estudiante, estoy en el segundo año de la carrera de Análisis de Sistemas Informáticos en la <a
+                    href="https://www.utic.edu.py/v7/">Universidad Teconológica Intercontinental - UTIC</a>, reforzando
+                mis habilidades con el curso de
+                Desarrollo Web en el <a href="https://www.idt.com.py/">Instituto de Diseño y Tecnología - IDT</a>; he
+                estado
+                desarrollando algunas páginas web las cuales tengo mas abajo en mi <a href="#portafolio">Portafolio</a>
+                profesional.</p>
         </section>
         <section id="sobre-mi">
             <ul>
