Se agrega imagenes

--- a/index.html
+++ b/index.html
@@ -81,36 +81,44 @@
             </ul>
         </section>
         <section id="portafolio">
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 1</h2>
-                <p><a href="#">ver más..</a></p>
+                <div><a href="https://memo94dev.github.io/socialinks/"><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
+                <p><a href="https://memo94dev.github.io/socialinks/">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 2</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 3</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 4</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 5</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 6</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 7</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
-            <div>
+            <div class="cotenedor-portafolio">
                 <h2>Página 8</h2>
+                <div><a href=""><img src="./images/hoja.jpg" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
         </section>
