Se agregan los iconos en la sección Contactos

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 </form>
             </div>
             <div class="caja-dos">
-                <div class="contenedor-social">1</div>
-                <div class="contenedor-social">2</div>
-                <div class="contenedor-social">3</div>
-                <div class="contenedor-social">4</div>
+                <div class="contenedor-social"><a href="https://www.linkedin.com/in/guillermo94barrientos/"><img class="image-nrm" src="./icons/linkedin.png" alt="icono enlace a linkedin"></a></div>
+                <div class="contenedor-social"><a href="https://x.com/memo94dev/"><img class="image-nrm" src="./icons/twitter.png" alt="icono enlace a twitter"></a></div>
+                <div class="contenedor-social"><a href="https://github.com/memo94dev/"><img class="image-back" src="./icons/github.png" alt="icono enlace a github"></a></div>
+                <div class="contenedor-social"><a href="https://memo94dev.github.io/socialinks/"><img class="image-back" src="./icons/boton-ver-mas.png" alt="icono enlace para ver más"></a></div>
             </div>
         </section>
     </main>
