--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Portfolio</title>
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
+    <title>Guillermo Barrientos</title>
 </head>
 
 <body>
