Se alinean los contenidos por cada sección, se agrega animación de párrafo  al inicio

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <section id="inicio">
             <div class="caja-izquierda">
                 <h1>Guillermo Barrientos</h1>
-                <p>¡Hola! Mi nombre es Guillermo Barrientos.. y soy un apasionado tester de calidad (QA) con una sólida
+                <p class="p-uno">¡Hola! Mi nombre es Guillermo Barrientos.. y soy un apasionado tester de calidad (QA) con una sólida
                     experiencia de más de dos años en la industria. Actualmente trabajo para una consultora donde
                     desempeño
                     múltiples roles, desde la realización de pruebas de calidad hasta la implementación y capacitación
                     de
                     sistemas, así como brindar soporte técnico a los usuarios.</p><br>
-                <p>Como estudiante, estoy en el segundo año de la carrera de Análisis de Sistemas Informáticos en la <a
+                <p class="p-dos">Como estudiante, estoy en el segundo año de la carrera de Análisis de Sistemas Informáticos en la <a
                         href="https://www.utic.edu.py/v7/">Universidad Teconológica Intercontinental - UTIC</a>,
                     reforzando
                     mis habilidades con el curso de
@@ -68,43 +68,52 @@
                 </li>
                 <details open name="sobremi">
                     <summary>Tester de Calidad (QA)</summary>
-                    <p><span>(enero/2023 - Actualidad)</span><br>
-                        • Responsabilidades: <br>
-                        Conducción de pruebas exhaustivas para garantizar la calidad del software.
-                        Identificación y documentación de errores y problemas potenciales.
-                        Colaboración con equipos de desarrollo para mejorar la calidad del producto.</p>
+                    <span>(enero/2023 - Actualidad)</span><br>
+                        <ul class="about">
+                            <li>Conducción de pruebas exhaustivas para garantizar la calidad del software.</li>
+                            <li>Identificación y documentación de errores y problemas potenciales.</li>
+                            <li>Colaboración con equipos de desarrollo para mejorar la calidad del producto.</li>
+                        </ul>
                 </details>
                 <details>
                     <summary>Implementación y Capacitación de Sistemas</summary>
-                    <p><span>(enero/2023 - Actualidad)</span><br>
-                        • Responsabilidades: <br>
-                        Despliegue exitoso de sistemas en entornos de producción.
-                        Capacitación a usuarios finales para garantizar una adopción efectiva del sistema.</p>
+                    <span>(enero/2023 - Actualidad)</span><br>
+                        <ul class="about">
+                            <li>Despliegue exitoso de sistemas en entornos de producción.</li>
+                            <li>Capacitación a usuarios finales para garantizar una adopción efectiva del sistema.</li>
+                        </ul>
                 </details>
                 <details>
                     <summary>Soporte al Usuario</summary>
-                    <p><span>(enero/2023 - Actualidad)</span><br>
-                        • Responsabilidades: <br>
-                        Resolución rápida y eficiente de problemas técnicos.
-                        Comunicación efectiva con los usuarios para comprender y abordar sus necesidades.</p>
+                    <span>(enero/2023 - Actualidad)</span><br>
+                        <ul class="about">
+                            <li>Resolución rápida y eficiente de problemas técnicos.</li>
+                            <li>Comunicación efectiva con los usuarios para comprender y abordar sus necesidades.</li>
+                            <li>Comunicación eficaz con el área de Desarrollo para la resolución rápida de errores del sistema</li>
+                        </ul>  
                 </details>
                 <li>
                     <h2>Educación y Desarrollo Profesional</h2>
                 </li>
                 <details name="sobremi">
                     <summary>Actualmente</summary>
-                    <p>Estudiante del segundo año de la carrera de Análisis de Sistemas Informáticos. Ampliando mis
-                        habilidades en el
-                        campo del desarrollo web, estudiando las tecnologías
-                        más actualizadas;
-                        realizando el curso de Desarrollador Web del Grupo IDT de manera online.</p>
+                    <ul class="about">
+                        <li>Estudiante del segundo año de la carrera de Análisis de Sistemas Informáticos.</li>
+                        <li>Ampliando mis
+                            habilidades en el
+                            campo del desarrollo web, estudiando las tecnologías
+                            más actualizadas;
+                            realizando el curso de Desarrollador Web del Grupo IDT de manera online.</li>
+                    </ul>  
                 </details>
                 <details>
                     <summary>Objetivos Profesionales</summary>
-                    <p>Mi objetivo es seguir creciendo como profesional en el campo de la tecnología, combinando mis
-                        habilidades en
-                        pruebas de calidad con el desarrollo web para ofrecer soluciones integrales y de alta
-                        calidad a los clientes.</p>
+                    <ul class="about">
+                        <li>Mi objetivo es seguir creciendo como profesional en el campo de la tecnología, combinando mis
+                            habilidades en
+                            pruebas de calidad con el desarrollo web para ofrecer soluciones integrales y de alta
+                            calidad a los clientes.</li>
+                    </ul>
                 </details>
             </ul>
         </section>
