Se agrega el atributo target -blank

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                             alt="icono enlace a linkedin"></a></div>
                 <div class="contenedor-social"><a href="https://x.com/memo94dev/"><img title="Perfil de Twitter"
                             class="image-nrm" src="./icons/twitter.png" alt="icono enlace a twitter"></a></div>
-                <div class="contenedor-social"><a href="https://github.com/memo94dev/"><img
+                <div class="contenedor-social"><a target="_blank" href="https://github.com/memo94dev/"><img
                             title="Repositorio de Github" class="image-back" src="./icons/github.png"
                             alt="icono enlace a github"></a></div>
-                <div class="contenedor-social"><a href="https://memo94dev.github.io/socialinks/"><img
+                <div class="contenedor-social"><a target="_blank" href="https://memo94dev.github.io/socialinks/"><img
                             title="Ver mas enlaces.." class="image-back" src="./icons/boton-ver-mas.png"
                             alt="icono enlace para ver más"></a></div>
             </div>
