Se agrega id a las iniciales en el header para redireccionar al botón flotante

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div>
-            <p>GB</p>
+            <p id="inicial">GB</p>
         </div>
         <nav>
             <ul>
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <button><a title="Volver al Inicio" href="#inicio">^</a></button>
+        <button><a title="Volver al Inicio" href="#inicial">^</a></button>
         <section id="inicio">
             <div class="caja-izquierda">
                 <h1>Guillermo Barrientos</h1>
