Se cambia el formato de todas las imagenes de jpg a webp

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     profesional.</p>
             </div>
             <div class="caja-derecha">
-                <img src="./images/perfil.png" alt="perfil personal">
+                <img src="./images/perfil.webp" alt="perfil personal">
                 <a title="Descargar pdf" class="btn-cv" href="./docs/GUILLERMO BARRIENTOS CV.pdf"
                     download="CV Guillermo Barrientos">Descargar
                     CV</a>
@@ -120,43 +120,43 @@
         <section id="portafolio">
             <div class="cotenedor-portafolio">
                 <h2>Página 1</h2>
-                <div><a href="https://memo94dev.github.io/socialinks/"><img src="./images/anotador.jpg"
+                <div><a href="https://memo94dev.github.io/socialinks/"><img src="./images/anotador.webp"
                             alt="portada de pagina web"></a></div>
                 <p><a href="https://memo94dev.github.io/socialinks/">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 2</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 3</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 4</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 5</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 6</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 7</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 8</h2>
-                <div><a href="#"><img src="./images/anotador.jpg" alt="portada de pagina web"></a></div>
+                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
         </section>
