Ajuste de fuentes, margenes, imgs, cursor pointer en los botones de Contacto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     desempeño
                     múltiples roles, desde la realización de pruebas de calidad hasta la implementación y capacitación
                     de
-                    sistemas, así como brindar soporte técnico a los usuarios.</p><br>
+                    sistemas, así como brindar soporte técnico a los usuarios.</p>
                 <p class="p-dos">Como estudiante, estoy en el segundo año de la carrera de Análisis de Sistemas Informáticos en la <a
                         href="https://www.utic.edu.py/v7/">Universidad Teconológica Intercontinental - UTIC</a>,
                     reforzando
