Se actualiza url del icono de Linkedin

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </form>
             </div>
             <div class="caja-dos">
-                <div class="contenedor-social"><a href="https://www.linkedin.com/in/guillermo94barrientos/"><img
+                <div class="contenedor-social"><a href="https://www.linkedin.com/in/memo94dev/"><img
                             title="Perfil de linkedin" class="image-nrm" src="./icons/linkedin.png"
                             alt="icono enlace a linkedin"></a></div>
                 <div class="contenedor-social"><a href="https://x.com/memo94dev/"><img title="Perfil de Twitter"
